# datalogger

./: Cargo.toml  README.md  justfile
docs/: state_diagram.puml  tasks.yaml
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/bme280/: bme280.rs  mod.rs  raw_temp.rs
usb-client/: Cargo.toml
usb-client/src/: main.rs
