[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
default-run = "firmware"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = 2

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
#embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "stm32f411re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.2.0", path = "../../embassy/embassy-usb", features = ["defmt" ] }
embassy-net = { version = "0.4.0", path = "../../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }

defmt = "0.3.7"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"
micromath = "2.1.0"
usbd-hid = "0.7.0"
static_cell = "2.1.0"
chrono = { version = "0.4.38", default-features = false }



[package.metadata.cargo-machete]
ignored = [
    "cortex-m",
    "cortex-m-rt",
    "embedded-hal",
    "embedded-io",
    "embedded-io-async",
    "panic-probe",
    "defmt",
    "defmt-rtt",
    "embassy-stm32",
    "embassy-executor",
    "embassy-time",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

