[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
default-run = "firmware"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = [
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "chrono",
] }
#embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["defmt", "stm32f411re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.5.0", path = "../../embassy/embassy-executor", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", path = "../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.2.0", path = "../../embassy/embassy-usb", features = [
    "defmt",
] }
embassy-net = { version = "0.4.0", path = "../../embassy/embassy-net", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.6.0"
embedded-io-async = "0.6.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.7.0"
static_cell = "2"
chrono = { version = "0.4", default-features = false }


[package.metadata.cargo-machete]
ignored = [
    "cortex-m",
    "cortex-m-rt",
    "embedded-hal",
    "embedded-io",
    "embedded-io-async",
    "panic-probe",
    "defmt",
    "defmt-rtt",
    "embassy-stm32",
    "embassy-executor",
    "embassy-time",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
